# dont-hug-me-im-gardening

./: .eslintrc.json  .gitignore  .prettierignore  README.md  deploy.js  package.json
.github/workflows/: publish.yml  release.yml
schemas/: schema.toml
src/: app.js  constants.js  globals.js  index.html  queries.js  store.js  style.css  utils.js
src-tauri/: .gitignore  Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config.toml
src-tauri/resources/sprite-packs/: 001.toml
src-tauri/schemas/: schema.toml
src-tauri/src/: bootstrap.rs  config.rs  main.rs
src/assets/: button.css  style.css
src/components/: button.js  buttons.js  forms.js  garden.js  index.js  list-items.js  lists.js  query.js
src/components/animated-list/: component.js  paginated-list.js  style.css  template.js
src/components/arrow-button/: component.js  style.css  template.js
src/components/delete-button/: component.js  style.css  template.js
src/components/garden/: component.js  style.css  template.js
src/components/garden-form/: component.js  style.css  template.js
src/components/garden-list-item/: component.js  style.css  template.js
src/components/garden-search/: component.js  style.css  template.js
src/components/garden-tile/: component.js  style.css  template.js
src/components/sprite-form/: component.js  style.css  template.js
src/components/sprite-list-item/: component.js  style.css  template.js
src/libs/: shirokuma.min.js
src/scripts/: app.js  constants.js  forms.js  garden.js  init.js  key_pair.js  lists.js  nav.js  queries.js  store.js
src/scripts/elements/: garden.js  index.js  plant.js  species.js
src/scripts/forms/: createGarden.js  createSpecies.js  index.js  search.js
