[package]
name = "p2p-garden"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
aquadoggo = { git = 'https://github.com/p2panda/aquadoggo', rev = "58e67941b4403c1e14ed943d2aaca80dc857c942" }
p2panda-rs = "0.8.0"
tauri = { version = "1.5", features = [ "cli", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.6"
env_logger = "0.10.1"
hex = "0.4.3"
anyhow = "1.0.75"
gql_client = "1.0.7"
tokio = { version = "1.34.0", feature = "sleep" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
