[package]
name = "p2p-garden"
version = "0.1.0"
description = "Create and share hand crafted gardens and custom sprite packs. Powered by p2panda."
authors = ["contact@samandreae.com"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/sandreae/dont-hug-me-im-gardening"
readme = "../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
aquadoggo = { git = "https://github.com/p2panda/aquadoggo", rev = "82e85f0e3f1c7d3a6201b49cf3a3f89e6b2fcae3" }
p2panda-rs = "0.8.1"
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "shell-open"] }
toml = "0.8.6"
env_logger = "0.10.1"
hex = "0.4.3"
anyhow = "1.0.75"
gql_client = "1.0.7"
tokio = { version = "1.34.0", feature = "sleep" }
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
