[package]
name = "p2p-garden"
version = "0.1.0"
description = "Create and share hand crafted gardens and custom sprite packs. Powered by p2panda."
authors = ["contact@samandreae.com"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/sandreae/dont-hug-me-im-gardening"
readme = "../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0.79"
aquadoggo = "0.8.0"
env_logger = "0.10.1"
figment = { version = "0.10.14", features = ["toml", "env"] }
hex = "0.4.3"
p2panda-rs = "0.8.1"
tauri = { version = "1.4", features = [ "dialog-all", "shell-open", "config-toml"] }
tempdir = "0.3.7"
tokio = "1.34.0"
toml = "0.8.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
